# boardgames_rust

./: Cargo.toml
boards/: Cargo.toml
boards/src/: cards.rs  lib.rs  random_engine.rs
boards/src/cards/: french.rs
solitaire/solitaire_backend/: Cargo.toml
solitaire/solitaire_backend/src/: lib.rs
solitaire/solitaire_cli/: Cargo.toml
solitaire/solitaire_cli/src/: grpc.rs  main.rs
solitaire/solitaire_grpc/: Cargo.toml  build.rs
solitaire/solitaire_grpc/proto/: solitaire.proto
solitaire/solitaire_grpc/src/: lib.rs  main.rs  serial.rs
solitaire/solitaire_grpc/src/proto/: solitaire.rs
solitaire/solitaire_grpc_server/: Cargo.toml
solitaire/solitaire_grpc_server/src/: main.rs
solitaire_backend/: Cargo.toml
solitaire_backend/src/: lib.rs
solitaire_cli/: Cargo.toml
