[package]
name = "solitaire_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boards = { path = "../../boards" }
solitaire_backend = { path = "../solitaire_backend" }
solitaire_grpc = { path = "../solitaire_grpc" }
tonic = "0.7.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
prost = "0.10.1"
async-trait = "0"
