[package]
name = "solitaire_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boards = { path = "../../boards" }
solitaire_backend = { path = "../solitaire_backend" }
tonic = "0.7.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
prost = "0.10.1"
futures-core = "0.3.21"
uuid = { version = "0.5.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.7.2"
